--- a/css/styles.css
+++ b/css/styles.css
@@ -125,9 +125,9 @@ a.red {
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.1875rem 2.125rem 1.1875rem 2.125rem;
-	border: 0.125rem solid #ff556e;
+	border: 0.125rem solid #1e88e5;
 	border-radius: 2rem;
-	background-color: #ff556e;
+	background-color: #1e88e5;
 	color: #fff;
 	font: 700 0.875rem/0 "Open Sans", sans-serif;
 	text-decoration: none;
@@ -135,18 +135,18 @@ a.red {
 }
 
 .btn-solid-reg:hover {
-	border: 0.125rem solid #ff556e;
+	border: 0.125rem solid #1e88e5;
 	background-color: transparent;
-	color: #ff556e;
+	color: #1e88e5;
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.5rem 2.375rem 1.5rem 2.375rem;
-	border: 0.125rem solid #ff556e;
+	border: 0.125rem solid #1e88e5;
 	border-radius: 2rem;
-	background-color: #ff556e;
+	background-color: #1e88e5;
 	color: #fff;
 	font: 700 0.875rem/0 "Open Sans", sans-serif;
 	text-decoration: none;
@@ -154,9 +154,9 @@ a.red {
 }
 
 .btn-solid-lg:hover {
-	border: 0.125rem solid #ff556e;
+	border: 0.125rem solid #1e88e5;
 	background-color: transparent;
-	color: #ff556e;
+	color: #1e88e5;
 	text-decoration: none;
 }
 
@@ -593,7 +593,7 @@ input[type='checkbox'] {
 	width: 1rem;
 	height: 1rem;
 	border-radius: 100%;
-	background-color: #ff556e;
+	background-color: #1e88e5;
 	-webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 	animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
@@ -661,7 +661,7 @@ input[type='checkbox'] {
 
 .navbar-custom .nav-item .nav-link:hover,
 .navbar-custom .nav-item .nav-link.active {
-	color: #ff556e;
+	color: #1e88e5;
 }
 
 /* Dropdown Menu */
@@ -710,7 +710,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-	color: #ff556e;
+	color: #1e88e5;
 }
 
 .navbar-custom .dropdown-divider {
@@ -727,13 +727,13 @@ input[type='checkbox'] {
 	margin-top: 0.125rem;
 	margin-bottom: 1.375rem;
 	margin-left: 0.5rem;
-	border: 0.125rem solid #ff556e;
-	color: #ff556e;
+	border: 0.125rem solid #1e88e5;
+	color: #1e88e5;
 }
 
 .navbar-custom .nav-item .btn-outline-sm:hover {
-	border: 0.125rem solid #ff556e;
-	background-color: #ff556e;
+	border: 0.125rem solid #1e88e5;
+	background-color: #1e88e5;
 	color: #fff;
 }
 
@@ -1666,7 +1666,7 @@ a:hover.back-to-top {
 
 	.navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
 	.navbar-custom.top-nav-collapse .nav-item .nav-link.active {
-		color: #ff556e;
+		color: #1e88e5;
 	}
 
 	.navbar-custom .dropdown-menu {
